--- a/index.html
+++ b/index.html
@@ -34,20 +34,18 @@
 						adhérents déja client de NeyMo
 					</h3>
 					<form class="firstBlock__form">
-					
-
 						<input
 							type="text"
 							id="name"
 							name="name"
-                            required
-                            class="firstBlock__input"
+							required
+							class="firstBlock__input"
 							minlength="4"
 							maxlength="8"
-                            size="10"
-                            placeholder="Trouver une monnaie locale partenaire "
-                        />
-                        <button class="firstBlock__button"> Commencer </button>
+							size="10"
+							placeholder="Trouver une monnaie locale partenaire "
+						/>
+						<button class="firstBlock__button">Commencer</button>
 					</form>
 				</div>
 				<div>
@@ -56,6 +54,33 @@
 						alt="desc-app"
 						class="firstBlock__image"
 					/>
+				</div>
+			</div>
+			<div class="secondBlock">
+				<div>
+					<img
+						src="./assets/images/Pic-Body-1.png"
+						alt="secondBlock-image"
+						class="secondBlock__image"
+					/>
+				</div>
+				<div class="secondBlock__text">
+					<h2 class="secondBlock__title">
+						Gérez votre argent plus efficacement grâce à la visualisation de vos
+						transactions.
+					</h2>
+					<div class="secondBlock__list">
+						<p class="secondBlock__ul">
+							<img src="./assets/images/mdi_check.svg" alt="check" class="secondBlock__svgCheck"/>
+							Visualiser vos dépenses et l’argent reçu grâce à la monnaie
+							locale.
+						</p>
+						<p class="secondBlock__ul">
+                            <img src="./assets/images/mdi_check.svg" alt="check" class="secondBlock__svgCheck"/>
+                            Accédder à
+							ces information rapidement en instantané !
+						</p>
+					</div>
 				</div>
 			</div>
 		</div>
