add missing blocks

--- a/index.html
+++ b/index.html
@@ -71,21 +71,158 @@
 					</h2>
 					<div class="secondBlock__list">
 						<p class="secondBlock__ul">
-							<img src="./assets/images/mdi_check.svg" alt="check" class="secondBlock__svgCheck"/>
+							<img
+								src="./assets/images/mdi_check.svg"
+								alt="check"
+								class="secondBlock__svgCheck"
+							/>
 							Visualiser vos dépenses et l’argent reçu grâce à la monnaie
 							locale.
 						</p>
 						<p class="secondBlock__ul">
-                            <img src="./assets/images/mdi_check.svg" alt="check" class="secondBlock__svgCheck"/>
-                            Accédder à
-							ces information rapidement en instantané !
+							<img
+								src="./assets/images/mdi_check.svg"
+								alt="check"
+								class="secondBlock__svgCheck"
+							/>
+							Accédder à ces information rapidement en instantané !
 						</p>
 					</div>
 				</div>
 			</div>
+			<div class="thirdBlock">
+				<div class="thirdBlock__text">
+					<h2 class="secondBlock__title">
+						Envoyé de l’argent pour payer à n’importe qui du réseau.
+					</h2>
+					<div class="secondBlock__list">
+						<p class="secondBlock__ul">
+							<img
+								src="./assets/images/mdi_check.svg"
+								alt="check"
+								class="secondBlock__svgCheck"
+							/>
+							Payer tous vos commercants et vos activités en soutenant leurs
+							économies !
+						</p>
+						<p class="secondBlock__ul">
+							<img
+								src="./assets/images/mdi_check.svg"
+								alt="check"
+								class="secondBlock__svgCheck"
+							/>
+							Rembouser vos amies , votre famille rapidement !
+						</p>
+					</div>
+				</div>
+				<div>
+					<img
+						src="./assets/images/Pic-Body-2.png"
+						alt="secondBlock-image"
+						class="secondBlock__image"
+					/>
+				</div>
+			</div>
+			<div class="secondBlock">
+				<div>
+					<img
+						src="./assets/images/Pic-Body-3.png"
+						alt="secondBlock-image"
+						class="secondBlock__image"
+					/>
+				</div>
+				<div class="secondBlock__text">
+					<h2 class="secondBlock__title">
+						Suivez vos commerçants favoris et restez au courant de leurs
+						dernières actualités.
+					</h2>
+					<div class="secondBlock__list">
+						<p class="secondBlock__ul">
+							<img
+								src="./assets/images/mdi_check.svg"
+								alt="check"
+								class="secondBlock__svgCheck"
+							/>
+							Les dernières nouvelles mises à votre disposition avant tout le
+							monde
+						</p>
+						<p class="secondBlock__ul">
+							<img
+								src="./assets/images/mdi_check.svg"
+								alt="check"
+								class="secondBlock__svgCheck"
+							/>
+							Accéder à leurs informations de contact immédiatement
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="thirdBlock">
+				<div class="thirdBlock__text">
+					<h2 class="secondBlock__title">
+						Changé de compte quand vous le souhaitez !
+					</h2>
+					<div class="secondBlock__list">
+						<p class="secondBlock__ul">
+							<img
+								src="./assets/images/mdi_check.svg"
+								alt="check"
+								class="secondBlock__svgCheck"
+							/>
+							Pas besoin de se reconnecter plusieurs fois
+						</p>
+						<p class="secondBlock__ul">
+							<img
+								src="./assets/images/mdi_check.svg"
+								alt="check"
+								class="secondBlock__svgCheck"
+							/>
+							Gain de temps et d’efficacité pour l’utilisateur
+						</p>
+					</div>
+				</div>
+				<div>
+					<img
+						src="./assets/images/Pic-Body-4.png"
+						alt="secondBlock-image"
+						class="secondBlock__image"
+					/>
+				</div>
+			</div>
+		</div>
+		<div class="form__start">
+			<h2 class="form__start__title">Lançez vous</h2>
+			<form class="firstBlock__form">
+				<input
+					type="text"
+					id="name"
+					name="name"
+					required
+					class="firstBlock__input"
+					minlength="4"
+					maxlength="8"
+					size="10"
+					placeholder="Trouver une monnaie locale partenaire "
+				/>
+				<button class="form__start_button">Commencer</button>
+			</form>
 		</div>
 		<footer>
-			<img src="./assets/images/Waves.svg" alt="waves" class="footer__waves" />
+			<div style="text-align: center; padding-top: 20px;">
+				<div class="footer__logo">
+					<img src="./assets/images/Logo-footer.svg" alt="logo-neymo" />
+				</div>
+				<div>
+					<img
+						src="./assets/images/Waves.svg"
+						alt="waves"
+						class="footer__waves"
+					/>
+					<!-- <p class="footer__copyright">
+						Un projet d’école par des étudiants d’ HETIC
+					</p> -->
+				</div>
+			</div>
 		</footer>
 	</body>
 </html>
