--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<img
 						src="./assets/images/Pic-Body-3.png"
 						alt="secondBlock-image"
-						class="secondBlock__image"
+						class="secondBlock__image resize"
 					/>
 				</div>
 				<div class="secondBlock__text">
