--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		<meta charset="UTF-8" />
 		<link rel="stylesheet" href="./assets/css/main.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/gsap.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/CSSRulePlugin.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/ScrollTrigger.min.js"></script>
 		<script src="./assets/js/index.js"></script>
 		<title>Neymo | Landing-Page</title>
 	</head>
@@ -15,12 +18,12 @@
 				</div>
 				<div class="navbar__rightSide">
 					<p class="navbar__soumssionMoney">Soumettre une monnaie locale</p>
-					<a href="#" class="btn">Accéder à la web app</a>
+					<a href="https://neymo.benjaminadida.fr" class="btn" target="__blank">Accéder à la web app</a>
 				</div>
 			</div>
 		</header>
 		<div class="container">
-			<div class="firstBlock">
+			<div class="firstBlock section">
 				<div class="firstBlock__text">
 					<h1 class="primaryTitle">
 						Repenser votre consommation <br />
@@ -56,7 +59,7 @@
 					/>
 				</div>
 			</div>
-			<div class="secondBlock">
+			<div class="secondBlock section">
 				<div>
 					<img
 						src="./assets/images/Pic-Body-1.png"
@@ -90,7 +93,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="thirdBlock">
+			<div class="thirdBlock section">
 				<div class="thirdBlock__text">
 					<h2 class="secondBlock__title">
 						Envoyé de l’argent pour payer à n’importe qui du réseau.
@@ -123,7 +126,7 @@
 					/>
 				</div>
 			</div>
-			<div class="secondBlock">
+			<div class="secondBlock section">
 				<div>
 					<img
 						src="./assets/images/Pic-Body-3.png"
@@ -157,7 +160,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="thirdBlock">
+			<div class="thirdBlock section">
 				<div class="thirdBlock__text">
 					<h2 class="secondBlock__title">
 						Changé de compte quand vous le souhaitez !
