--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<div class="container">
 			<div class="firstBlock section">
 				<div class="firstBlock__text">
-					<h1 class="primaryTitle">
+					<h1 class="primaryTitle title">
 						Repenser votre consommation <br />
 						vers le local
 					</h1>
@@ -68,7 +68,7 @@
 					/>
 				</div>
 				<div class="secondBlock__text">
-					<h2 class="secondBlock__title">
+					<h2 class="secondBlock__title title">
 						Gérez votre argent plus efficacement grâce à la visualisation de vos
 						transactions.
 					</h2>
@@ -95,7 +95,7 @@
 			</div>
 			<div class="thirdBlock section">
 				<div class="thirdBlock__text">
-					<h2 class="secondBlock__title">
+					<h2 class="secondBlock__title title">
 						Envoyé de l’argent pour payer à n’importe qui du réseau.
 					</h2>
 					<div class="secondBlock__list">
