--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/CSSRulePlugin.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.0/ScrollTrigger.min.js"></script>
 		<script src="./assets/js/index.js"></script>
+		<link rel="icon" type="image/png" href="./assets/images/favicon.png">
 		<title>Neymo | Landing-Page</title>
 	</head>
 	<body>
